--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,8 @@
       }
       body {
         /* background: black; */
-        background: url("./img/bgimg.png");
+        /* background: url("./img/bgimg.png"); */
+        background: skyblue;
         background-size: 100% 100%;
       }
       #canvas {
