--- a/static/index.html
+++ b/static/index.html
@@ -10,9 +10,9 @@
       }
       body {
         /* background: black; */
-        /* background: url("./img/bgimg.png"); */
-        background: skyblue;
-        background-size: 100% 100%;
+        background: url("./img/5.JPG");
+        /* background: skyblue; */
+        background-size: 100% 100%
       }
       #canvas {
         height: 100vh;
@@ -171,7 +171,7 @@
         }
       }
 
-      var arr = ["3", "2", "1", "GO!"];
+      var arr = ["欢迎", "来到", "刘家峡", "GO!"];
       var num = 0;
       window.onload = function () {
         var timer = setInterval(function () {
